--- a/src/main/resources/templates/Frontend/Admin/Reviews.mustache
+++ b/src/main/resources/templates/Frontend/Admin/Reviews.mustache
@@ -177,55 +177,55 @@
                 </button>
             </div>
             <div class="modal-body" id="modalBody">
-                <form>
+                <form method="POST" action="/Admin/updateReview" novalidate>
                     <div class="form-group row">
                         <label for="reviewId" class="col-4 col-form-label">Review id</label>
                         <div class="col-8">
-                            <input id="reviewId" name="text1" type="text" class="form-control" readonly>
+                            <input id="reviewId" name="reviewId" type="text" class="form-control" readonly>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="productId" class="col-4 col-form-label">Product id</label>
                         <div class="col-8">
-                            <input id="productId" name="text2" type="text" class="form-control" readonly>
+                            <input id="productId" name="productId" type="text" class="form-control" readonly>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="title" class="col-4 col-form-label">Title</label>
                         <div class="col-8">
-                            <input id="title" name="text" type="text" class="form-control">
+                            <input id="title" name="title" type="text" class="form-control">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="rating" class="col-4 col-form-label">Rating</label>
                         <div class="col-8">
-                            <input id="rating" name="text3" type="text" class="form-control">
+                            <input id="rating" name="rating" type="number" class="form-control" required min="1" max="5" placeholder="max rating 5">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="createdAt" class="col-4 col-form-label">Created At</label>
                         <div class="col-8">
-                            <input id="createdAt" name="text3" type="text" class="form-control">
+                            <input id="createdAt" name="createdAt" type="text" class="form-control">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="content" class="col-4 col-form-label">Content</label>
                         <div class="col-8">
-                            <input id="content" name="text3" type="text" class="form-control">
+                            <input id="content" name="content" type="text" class="form-control">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="userId" class="col-4 col-form-label">User id</label >
                         <div class="col-8">
-                            <input id="userId" name="text3" type="text" class="form-control" readonly>
+                            <input id="userId" name="userId" type="number" class="form-control" readonly>
                         </div>
                     </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">Save changes</button>
+                        <a id="deletebtn" class="btn btn-danger">Delete Event</a>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
                 </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary">Save changes</button>
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Delete</button>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
@@ -234,32 +234,9 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <script src="/js/Admin/scripts.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-<script src="/js/Admin/chart-area-demo.js"></script>
-<script src="/js/Admin/chart-bar-demo.js"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>
-<script src="/js/Admin/datatables-demo.js"></script>
-
-<script> //Selecting a row.
-$(document).ready(function () {
-
-    $("#dataTable tbody tr").click(function () {
-        var tableData = $(this).children("td").map(function() {
-            return $(this).text();
-        }).get();
-        $("#reviewId").val(tableData[0]);
-        $("#productId").val(tableData[1]);
-        $("#title").val(tableData[2]);
-        $("#rating").val(tableData[3]);
-        $("#createdAt").val(tableData[4]);
-        $("#content").val(tableData[5]);
-        $("#userId").val(tableData[6]);
-        $('#reviewModal').modal('show');
-    });
-});
-
-</script>
+<script src="/js/Admin/datatables-reviews.js"></script>
 
 
 </body>
