--- a/src/main/resources/templates/Frontend/Main/Index.mustache
+++ b/src/main/resources/templates/Frontend/Main/Index.mustache
@@ -105,12 +105,22 @@
             font-size: 20px;
             letter-spacing: 2px;
         }
+        .userMenu {
+            line-height: 60px;
+            position: fixed;
+            float: right;
+            margin: 16px 46px;
+            color: #fff;
+            font-weight: bold;
+            font-size: 20px;
+            letter-spacing: 2px;
+        }
 
         nav {
             position: fixed;
             width: 100%;
             line-height: 60px;
-            z-index: 1;
+            z-index: 3;
         }
 
         nav ul {
@@ -129,21 +139,10 @@
             background: #000;
         }
 
-<<<<<<< HEAD
-      nav.black ul {
-            background: #000;
-            overflow:hidden;
-      }
-      nav{
-            overflow:hidden;
-
-      }
-=======
         nav ul li {
             display: inline-block;
             padding: 16px 40px;;
         }
->>>>>>> 58d48bd574ea828b287d925964150b0f5c853701
 
         nav ul li a {
             text-decoration: none;
@@ -154,11 +153,6 @@
         .menu-icon {
             line-height: 60px;
             width: 100%;
-<<<<<<< HEAD
-            padding: 10px;
-            text-align: center;
-      }
-=======
             background: #000;
             text-align: right;
             box-sizing: border-box;
@@ -167,19 +161,40 @@
             color: #fff;
             display: none;
         }
+        .user2 {     
+                display:none;
+        }
+.card-columns{
+              column-count: 4;
+        }
 
         @media (max-width: 786px) {
+                header {
+            width: 100%;
+            height: 60vh;
+            background: url(/img/hero.png) no-repeat 50% 50%;
+            background-size: cover;
+        }
+
+           #user1 { 
+            display:none;
+        }
+        .user2 {
+             display:inline-block;       
+        }
 
             .logo {
                 position: fixed;
                 top: 0;
                 margin-top: 16px;
             }
->>>>>>> 58d48bd574ea828b287d925964150b0f5c853701
 
             nav ul {
                 max-height: 0px;
                 background: #000;
+            }
+             nav {
+                overflow:hidden;
             }
 
             nav.black ul {
@@ -188,21 +203,27 @@
 
             .showing {
                 max-height: 34em;
+                overflow: visible;
             }
 
             nav ul li {
                 box-sizing: border-box;
                 width: 100%;
-                padding: 24px;
+                padding: 5px;
                 text-align: center;
             }
 
             .menu-icon {
                 display: block;
             }
-
+            .card-columns{
+              column-count: 1;
         }
 
+        }
+        
+
+        
 
     </style>
 
@@ -214,24 +235,35 @@
 <header>
     <nav>
         <div class="menu-icon">
-            <i class="fa fa-bars fa-2x"></i>
+
+           <div >
+           
         </div>
+      
+            <i class="fa fa-bars fa-2x"></i>
+
+              
+        </div>
+        
         <div class="logo">
             <img style="float: left; margin-right: 1%;" src="/img/pikto.png" width="100" href="localhost:8888/Index"/>
         </div>
+     
+         
+
+
         <div class="menu">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="http://localhost:8888/Index/Category/1">Backgrounds</a></li>
+                <li><a href="http://localhost:8888/Index/Category/2">Stockphotos</a></li>
+                <li><a href="http://localhost:8888/Index/Category/3">Illustrations</a></li>
                 <li><a href="#">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                          class="bi bi-cart-fill" viewBox="0 0 16 16">
                         <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
                     </svg>
                 </a></li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown" id="user1">
                     <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown"
                        aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown"
@@ -245,6 +277,9 @@
                         </form>
                     </div>
                 </li>
+
+              <li class="user2"><i class='fas fa-user-alt'  style='font-size:17px;'></i></li>
+
             </ul>
         </div>
     </nav>
@@ -253,35 +288,19 @@
             <div class="col-12">
                 <div class="search">
                     <div>
-                        <input class="input" type="text" id="searchValue" name="s" placeholder="How may we help you?">
+                        <input class="input" type="text" id="searchValue" name="s" placeholder="Search for photos">
                         <button onclick="myFunction()"><i class="fa fa-search"></i></button>
                     </div>
                 </div>
             </div>
-<<<<<<< HEAD
-        </li>
-                  </ul>
-				  	
-               </div>
-            </nav>
-			<section class="hero hero--video">
-    <div class="container">
-      <div class="col-12">
-        <div class="search">
-          <div>
-            <input class="input" type="text" id="searchValue" name="s" placeholder="How may we help you?">
-            <button onclick="myFunction()"><i class="fa fa-search"></i></button>
-=======
->>>>>>> 58d48bd574ea828b287d925964150b0f5c853701
         </div>
     </section>
 </header>
 
 
 <div class="container" style="max-width:90%; margin-top:1.25rem; ">
-    <button onclick="myFunction()"></button>
     <div class="row">
-        <div class="card-columns" style="column-count: 4;">
+        <div class="card-columns" >
             {{#allProducts}}
             <div class="card" style="margin:0; padding:0; border:0px;">
                 <div class="card-body" style="margin:0; padding:0;">
@@ -344,6 +363,10 @@
         window.location.replace(concat);
 
     }
+
+    
+
+  
 </script>
 
 </body>
