--- a/src/main/resources/templates/Frontend/Admin/IndividualUser.mustache
+++ b/src/main/resources/templates/Frontend/Admin/IndividualUser.mustache
@@ -410,7 +410,7 @@
                                 </tr>
                                 </tfoot>
                                 <tbody>
-                                {{#allReviews}}
+                                {{#userReviews}}
                                 <tr>
                                     <td class="hide">{{reviewId}}</td>
                                     <td>{{productId}}</td>
@@ -420,7 +420,7 @@
                                     <td>{{content}}</td>
                                     <td>{{userId}}</td>
                                 </tr>
-                                {{/allReviews}}
+                                {{/userReviews}}
                                 </tbody>
                             </table>
                         </div>
@@ -666,6 +666,70 @@
         </div>
     </div>
 </div>
+<div class="modal" tabindex="-1" role="dialog" id="r_reviewModal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Edit Review</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id="reviewModalBody">
+                <form method="POST" action="/Admin/User/updateReview" novalidate>
+                    <div class="form-group row">
+                        <label for="r_reviewId" class="col-4 col-form-label">Review id</label>
+                        <div class="col-8">
+                            <input id="r_reviewId" name="reviewId" type="text" class="form-control" readonly>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="r_productId" class="col-4 col-form-label">Product id</label>
+                        <div class="col-8">
+                            <input id="r_productId" name="productId" type="text" class="form-control" readonly>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="r_title" class="col-4 col-form-label">Title</label>
+                        <div class="col-8">
+                            <input id="r_title" name="title" type="text" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="r_rating" class="col-4 col-form-label">Rating</label>
+                        <div class="col-8">
+                            <input id="r_rating" name="rating" type="number" class="form-control" required min="1" max="5" placeholder="max rating 5">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="r_createdAt" class="col-4 col-form-label">Created At</label>
+                        <div class="col-8">
+                            <input id="r_createdAt" name="createdAt" type="text" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="r_content" class="col-4 col-form-label">Content</label>
+                        <div class="col-8">
+                            <input id="r_content" name="content" type="text" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="r_userId" class="col-4 col-form-label">User id</label >
+                        <div class="col-8">
+                            <input id="r_userId" name="userId" type="number" class="form-control" readonly>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">Save changes</button>
+                        <a id="r_deletebtn" class="btn btn-danger">Delete Event</a>
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
