--- a/src/main/resources/templates/loginAdmin.mustache
+++ b/src/main/resources/templates/loginAdmin.mustache
@@ -90,13 +90,13 @@
         <div class="form-group">
             <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-user"></i></span>
-                <input type="text" class="form-control" name="username" placeholder="Email" required="required" value="{{userData.email}}">
+                <input type="text" class="form-control" name="username" placeholder="Email" required="required" value="{{userData.email}}" autocomplete="on">
             </div>
         </div>
         <div class="form-group">
             <div class="input-group">
                 <span class="input-group-addon"><i class="fa fa-lock"></i></span>
-                <input type="password" class="form-control" name="password" placeholder="Password" required="required">
+                <input type="password" class="form-control" name="password" placeholder="Password" required="required" autocomplete="on">
             </div>
         </div>
         <div class="form-group">
