--- a/src/main/resources/templates/Frontend/Admin/IndividualUser.mustache
+++ b/src/main/resources/templates/Frontend/Admin/IndividualUser.mustache
@@ -730,7 +730,7 @@
     </div>
 </div>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
+<script src="/js/Admin/jquery.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
 <script src="/js/Admin/scripts.js"></script>
