--- a/src/main/resources/templates/Frontend/Admin/Products.mustache
+++ b/src/main/resources/templates/Frontend/Admin/Products.mustache
@@ -262,8 +262,12 @@
 </div>
 
 
+<script src="/js/Admin/jquery.js"></script>
+<script src="/js/Admin/scripts.js"></script>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" crossorigin="anonymous"></script>
+<script src="/js/Admin/chart-area-demo.js"></script>
+<script src="/js/Admin/chart-bar-demo.js"></script>
+<script src="/js/Admin/jquery.backstretch.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <script src="/js/Admin/scripts.js"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
