--- a/src/main/resources/templates/Frontend/Admin/IndividualUser.mustache
+++ b/src/main/resources/templates/Frontend/Admin/IndividualUser.mustache
@@ -12,6 +12,7 @@
           crossorigin="anonymous"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js"
             crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body class="sb-nav-fixed">
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
@@ -50,7 +51,7 @@
         <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
             <div class="sb-sidenav-menu">
                 <div class="profile-userpic">
-                    <img src="https://scontent.fbma2-1.fna.fbcdn.net/v/t1.0-9/17796707_10155264022745159_8129848447376750595_n.jpg?_nc_cat=111&ccb=2&_nc_sid=174925&_nc_ohc=njmSzJq0HE8AX_RWY6P&_nc_ht=scontent.fbma2-1.fna&oh=ae2a9a187954f17fe489be1522d04e9e&oe=60448624"
+                    <img src="{{userData.pictureUrl}}"
                          class="img-responsive" style="display:block; margin: 0 auto; padding-top: 20px; ">
                 </div>
                 <div class="profile-usertitle">
@@ -139,35 +140,35 @@
                                                                            id="AdminfirstName" name="firstName"
                                                                            aria-describedby="emailHelp"
                                                                            placeholder=""
-                                                                           value="{{userData.firstName}}">
+                                                                           value="{{user.firstName}}">
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label for="AdminLastName">Lastname</label>
                                                                     <input type="text" class="form-control"
                                                                            id="AdminLastName" name="lastName"
                                                                            placeholder=""
-                                                                           value="{{userData.lastName}}">
+                                                                           value="{{user.lastName}}">
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label for="AdminPhoneNumber">Phonenumber</label>
                                                                     <input type="text" class="form-control"
                                                                            id="AdminPhoneNumber" name="mobileNr"
                                                                            placeholder=""
-                                                                           value="{{userData.mobileNr}}">
+                                                                           value="{{user.mobileNr}}">
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label for="AdminEmail">Email</label>
                                                                     <input type="text" class="form-control"
                                                                            id="AdminEmail" name="email"
                                                                            placeholder=""
-                                                                           value="{{userData.email}}">
+                                                                           value="{{user.email}}">
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label for="AdminAuth">Authority</label>
                                                                     <input type="text" class="form-control"
                                                                            id="AdminAuth" name="admin"
                                                                            placeholder=""
-                                                                           value="{{userData.admin}}">
+                                                                           value="{{user.admin}}">
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label for="AdminPictureUrl">Seller
@@ -175,7 +176,7 @@
                                                                     <input type="text" class="form-control"
                                                                            id="Seller" name="seller"
                                                                            placeholder=""
-                                                                           value="{{userData.seller}}">
+                                                                           value="{{user.seller}}">
                                                                 </div>
                                                                 <div class="form-group">
                                                                     <label for="AdminPictureUrl">Profile
@@ -183,13 +184,13 @@
                                                                     <input type="text" class="form-control"
                                                                            id="AdminPictureUrl" name="pictureUrl"
                                                                            placeholder=""
-                                                                           value="{{userData.pictureUrl}}">
+                                                                           value="{{user.pictureUrl}}">
                                                                 </div>
                                                                 <div class="form-group hide">
                                                                     <label for="userId">userId
                                                                         </label>
                                                                     <input type="text" class="hidden" name="userId"
-                                                                           value="{{userData.userId}}">
+                                                                           value="{{user.userId}}">
                                                                 </div>
 
                                                                 <div class="form-group form-check">
@@ -729,16 +730,15 @@
         </div>
     </div>
 </div>
-
-<script src="/js/Admin/jquery.js"></script>
+<script src="/js/Admin/scripts.js"></script>
+<script src="/js/Admin/jquery.backstretch.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
-<script src="/js/Admin/scripts.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-<script src="/js/Admin/chart-area-demo.js"></script>
-<script src="/js/Admin/chart-bar-demo.js"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
 <script src="/js/Admin/datatables-user.js"></script>
+<script src="/js/Admin/chart-area-user.js"></script>
+<script src="/js/Admin/chart-bar-user.js"></script>
 </body>
 </html>
