--- a/src/main/resources/templates/Frontend/Admin/IndividualUser.mustache
+++ b/src/main/resources/templates/Frontend/Admin/IndividualUser.mustache
@@ -730,13 +730,14 @@
         </div>
     </div>
 </div>
-<script src="/js/Admin/scripts.js"></script>
+
 <script src="/js/Admin/jquery.backstretch.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+<!--<script src="/js/Admin/scripts.js"></script>-->
 <script src="/js/Admin/datatables-user.js"></script>
 <script src="/js/Admin/chart-area-user.js"></script>
 <script src="/js/Admin/chart-bar-user.js"></script>
