--- a/src/main/resources/templates/Frontend/Admin/Orders.mustache
+++ b/src/main/resources/templates/Frontend/Admin/Orders.mustache
@@ -354,9 +354,9 @@
 </div>
 
 <script src="/js/Admin/jquery.js"></script>
-<script src="/js/Admin/scripts.js"></script>
-<script src="/js/Admin/jquery.backstretch.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<!--<script src="/js/Admin/scripts.js"></script>-->
+<script src="/js/Admin/jquery.backstretch.min.js"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>
 <script src="/js/Admin/datatables-orders.js"></script>
