--- a/src/main/resources/templates/Frontend/Admin/Products.mustache
+++ b/src/main/resources/templates/Frontend/Admin/Products.mustache
@@ -263,13 +263,13 @@
 
 
 <script src="/js/Admin/jquery.js"></script>
-<script src="/js/Admin/scripts.js"></script>
-<script src="/js/Admin/jquery.backstretch.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script src="/js/Admin/jquery.backstretch.min.js"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
 <script src="/js/Admin/datatables-products.js"></script>
+<!--<script src="/js/Admin/scripts.js"></script>-->
 <script>
 
 </script>
