--- a/src/main/resources/templates/Frontend/Main/CategoryPage.mustache
+++ b/src/main/resources/templates/Frontend/Main/CategoryPage.mustache
@@ -374,12 +374,10 @@
     </div>
 
     <div class="flex-container">
-<<<<<<< HEAD
-=======
     <div class=center>
     <div class="profile-circel-image-50">
       <img src="https://images.pexels.com/photos/2113566/pexels-photo-2113566.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" class="img-fluid rounded-circle">
-      <h5 class="categoryText" value="nature">Nature</h5>
+      <h5 class="categoryText">Nature</h5>
       </div>
        </div>
 
@@ -403,9 +401,6 @@
       <h5 class="categoryText" >Animals</h5>
       </div>
        </div>
-
-        
->>>>>>> cb38eda1d4e1d098fb13a567fce9075f3a88f87b
         <div class=center>
             <div class="profile-circel-image-50">
                 <img src="https://images.pexels.com/photos/2113566/pexels-photo-2113566.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
